# employee-api

./: .env  Dockerfile  README.md  create_tables.sql  docker-compose.yml  pyproject.toml  seed_sample_data.sql
src/: main.py
src/employee_api/controllers/: search_controller.py
src/employee_api/infrastructure/: dependencies.py
src/employee_api/infrastructure/db/: employee_repository.py  models.py
src/employee_api/infrastructure/in_memory/: rate_limiter_store.py  view_config_repository.py
src/employee_api/middlewares/: rate_limit.py
src/employee_api/services/common/: cache.py
src/employee_api/services/employee/: dtos.py  employee.py  employee_filters.py  employee_repository.py  employee_services.py
src/employee_api/services/rate_limit/: rate_limit_services.py  store.py
src/employee_api/services/view_config/: view_config.py  view_config_repository.py
tests/services/employee/: test_dtos.py  test_employee_services.py
tests/services/rate_limit/: test_rate_limit_services.py
tests/services/view_config/: test_view_config_repository.py
